GNOME Bugzilla – Bug 770332
Notebook arrow icon wrong color after creating new tab
Last modified: 2016-08-24 18:11:44 UTC
This is a regression in GTK+ 3.20, I just didn't report it until now. Frequently the arrow icons on the edges of GtkNotebook are displayed black when they should be gray: * Open some app that uses a GtkNotebook (gedit, Epiphany, etc.) * Create a several new tabs, until there are too many to fit in the window and the arrow icons appear on the ends of the GtkNotebook * Notice that the arrow icon is black, as if it is clickable, even though you are viewing the rightmost tab. This is wrong! * Hover mouse over the arrow icon, it changes to gray like it should be.