gtk/gtknotebook.c
@@ -6211,6 +6211,9 @@ gtk_notebook_real_switch_page (GtkNotebook     *notebook,
           gtk_widget_grab_focus (GTK_WIDGET (notebook));
     }
 
+  if (priv->scrollable)
+    gtk_notebook_redraw_arrows (notebook);
+
   gtk_widget_queue_resize (GTK_WIDGET (notebook));
   g_object_notify_by_pspec (G_OBJECT (notebook), properties[PROP_PAGE]);
 }
